# xorg-rendercheck

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  main.c  ops.c  rendercheck.1  rendercheck.h  t_blend.c  t_bug7366.c  t_composite.c  t_dstcoords.c  t_fill.c  t_gradient.c  t_gtk_argb_xbgr.c  t_libreoffice_xrgb.c  t_repeat.c  t_shmblend.c  t_srccoords.c  t_triangles.c  t_tsrccoords.c  t_tsrccoords2.c  tests.c
doc/: TODO
man/: Makefile.am
